:sparkles: initial commit

--- a/package.json
+++ b/package.json
@@ -1,34 +1,23 @@
 {
-  "name": "bl-react-template",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+  "name": "cra-template-bridgelabs-basic",
+  "version": "1.0.0",
+  "description": "Bridge Labs basic react template",
+  "keywords": [
+    "react",
+    "create-react-app",
+    "template"
+  ],
+  "engines": {
+    "node": ">=8"
   },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/BridgeLabsDesign/cra-template-bridgelabs-basic.git"
   },
-  "eslintConfig": {
-    "extends": "react-app"
+  "author": "Bridge Labs Design",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/BridgeLabsDesign/cra-template-bridgelabs-basic/issues"
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+  "homepage": "https://github.com/BridgeLabsDesign/cra-template-bridgelabs-basic#readme"
 }
